@@ -1905,7 +1905,29 @@ multibuild-netbsd-x86_64: \
 multibuild-netbsd-sparc64: multibuild-porting64-gcc # TODO
 
 # OpenBSD/x86_64
-multibuild-openbsd-x86_64: multibuild-porting64-gcc # TODO
+# Note: build-porting64-gcc-debug_gcsafety has compilation failures on some
+# OpenBSD versions.
+multibuild-openbsd-x86_64: \
+  build-porting64-gcc-portability \
+  build-porting64-gcc-safety3 \
+  build-porting64-gcc-heapcodes \
+  build-porting64-gcc-one_free_bit_heapcodes-malloc \
+  build-porting64-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting64-gcc-generic64_heapcodes \
+  build-porting64-gcc-heapcodes-spvw_pages \
+  build-porting64-gcc-typecodes-spvw_pure_pages \
+  build-porting64-gcc-typecodes-spvw_mixed_pages \
+  build-porting64-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting64-gcc-typecodes-spvw_mixed_blocks-malloc \
+  build-porting64-gcc-typecodes-spvw_mixed_blocks-trivialmap \
+  build-porting64-gcc-limited_memory \
+  build-porting64-gcc-old_gc \
+  build-porting64-gcc-multithread_gc \
+  build-porting64-gcc-generational_gc-old_gc \
+  build-porting64-gcc-generational_gc-multithread_gc \
+  build-porting64-gcc-safety0 \
+  build-porting64-gcc-safety0-optimized \
+  build-porting64-gcc-debug_gcsafety
 
 # Mac OS X/x86_64
 multibuild-macosx-x86_64: multibuild-porting64-gcc # TODO
